接口定义封装

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -38,6 +38,17 @@
 
 
 
+
+
+.icons {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+ }
+
+
+
 .fade-enter,
 .fade-leave-to {
   opacity: 0;
