--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -16,8 +16,21 @@
             justify-content: center;
             align-items: center;
             height: 100%;
+            color: #707070;
+            font-size: 20px;
+            transition: color 0.3s;
+            >div{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                svg{
+                    font-size: 35px;
+                    margin-bottom: 8px;
+                }
+            }
             &.active{
-                color: red;
+                color: #ff4033;
             }
         }
     }
