--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -2,32 +2,55 @@
     background: #212121;
     width: 524px;
     height: 72px;
-    border-radius: 36px;
     margin: 0 auto;
-    overflow: hidden;
     position: relative;
+    transition: transform 0.3s;
+    border-radius: 36px;
+    &[data-status='leave']{
+        .icon-search{
+            pointer-events: none;
+        }
+    }
+    &[data-status='enter']{
+        transform: translateX(50%) translateX(-345px);
+        input{
+            text-align: left;
+        }
+    }
+    .btn-leave{
+        font-size: 28px;
+        color: white;
+        right: -20px;
+        position: absolute;
+        top: 50%;
+        transform: translateX(100%) translateY(-50%);
+        cursor: pointer;
+    }
     .icon-search{
+        @include sprite($sprite-cm2-list-icn-search-2x);
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         left: 21px;
-        font-size: 30px;
-        color: #a2a2a2;
         cursor: pointer;
     }
     input{
+        @include placeholder(#4c4c4c,24px);
+        border-radius: 36px;
         width: 100%;
-        height: 100%;
+        height: 72px;
+        line-height: normal;
         background: transparent;
         outline: none;
         border: none;
         padding: 0 65px;  
+        padding-top: 2px;
         font-size: 24px;
         color: #a2a2a2;
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
-        @include placeholder(#4c4c4c,24px);
+        text-align: center;
     }
     
 }
