--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -58,3 +58,13 @@
 .fade-leave-active {
   transition: opacity .3s;
 }
+
+.scale-enter,
+.scale-leave-to {
+  transform: scale(0);
+}
+
+.scale-enter-active,
+.scale-leave-active {
+  transition: transform .3s;
+}
