--- a/src/assets/_spritesmith/netease.scss
+++ b/src/assets/_spritesmith/netease.scss
@@ -22,15 +22,15 @@ $sprite-cm2-icn-back-2x-image: '~@/assets/_spritesmith/netease.png';
 $sprite-cm2-icn-back-2x: (384px, 53px, -384px, -53px, 50px, 50px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_icn_back@2x', );
 $sprite-cm2-list-icn-search-2x-name: 'sprite_cm2_list_icn_search@2x';
 $sprite-cm2-list-icn-search-2x-x: 384px;
-$sprite-cm2-list-icn-search-2x-y: 104px;
+$sprite-cm2-list-icn-search-2x-y: 196px;
 $sprite-cm2-list-icn-search-2x-offset-x: -384px;
-$sprite-cm2-list-icn-search-2x-offset-y: -104px;
+$sprite-cm2-list-icn-search-2x-offset-y: -196px;
 $sprite-cm2-list-icn-search-2x-width: 24px;
 $sprite-cm2-list-icn-search-2x-height: 24px;
 $sprite-cm2-list-icn-search-2x-total-width: 436px;
 $sprite-cm2-list-icn-search-2x-total-height: 383px;
 $sprite-cm2-list-icn-search-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-list-icn-search-2x: (384px, 104px, -384px, -104px, 24px, 24px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_list_icn_search@2x', );
+$sprite-cm2-list-icn-search-2x: (384px, 196px, -384px, -196px, 24px, 24px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_list_icn_search@2x', );
 $sprite-cm4-btm-icn-account-2x-name: 'sprite_cm4_btm_icn_account@2x';
 $sprite-cm4-btm-icn-account-2x-x: 285px;
 $sprite-cm4-btm-icn-account-2x-y: 198px;
@@ -53,6 +53,28 @@ $sprite-cm4-btm-icn-discovery-2x-total-width: 436px;
 $sprite-cm4-btm-icn-discovery-2x-total-height: 383px;
 $sprite-cm4-btm-icn-discovery-2x-image: '~@/assets/_spritesmith/netease.png';
 $sprite-cm4-btm-icn-discovery-2x: (384px, 0px, -384px, 0px, 52px, 52px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm4_btm_icn_discovery@2x', );
+$sprite-cm4-btm-icn-account-white-2x-name: 'sprite_cm4_btm_icn_account_white@2x';
+$sprite-cm4-btm-icn-account-white-2x-x: 384px;
+$sprite-cm4-btm-icn-account-white-2x-y: 151px;
+$sprite-cm4-btm-icn-account-white-2x-offset-x: -384px;
+$sprite-cm4-btm-icn-account-white-2x-offset-y: -151px;
+$sprite-cm4-btm-icn-account-white-2x-width: 38px;
+$sprite-cm4-btm-icn-account-white-2x-height: 44px;
+$sprite-cm4-btm-icn-account-white-2x-total-width: 436px;
+$sprite-cm4-btm-icn-account-white-2x-total-height: 383px;
+$sprite-cm4-btm-icn-account-white-2x-image: '~@/assets/_spritesmith/netease.png';
+$sprite-cm4-btm-icn-account-white-2x: (384px, 151px, -384px, -151px, 38px, 44px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm4_btm_icn_account_white@2x', );
+$sprite-cm4-btm-icn-discovery-white-2x-name: 'sprite_cm4_btm_icn_discovery_white@2x';
+$sprite-cm4-btm-icn-discovery-white-2x-x: 384px;
+$sprite-cm4-btm-icn-discovery-white-2x-y: 104px;
+$sprite-cm4-btm-icn-discovery-white-2x-offset-x: -384px;
+$sprite-cm4-btm-icn-discovery-white-2x-offset-y: -104px;
+$sprite-cm4-btm-icn-discovery-white-2x-width: 41px;
+$sprite-cm4-btm-icn-discovery-white-2x-height: 46px;
+$sprite-cm4-btm-icn-discovery-white-2x-total-width: 436px;
+$sprite-cm4-btm-icn-discovery-white-2x-total-height: 383px;
+$sprite-cm4-btm-icn-discovery-white-2x-image: '~@/assets/_spritesmith/netease.png';
+$sprite-cm4-btm-icn-discovery-white-2x: (384px, 104px, -384px, -104px, 41px, 46px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm4_btm_icn_discovery_white@2x', );
 $sprite-cm2-fm-btn-cmt-number-2x-name: 'sprite_cm2_fm_btn_cmt_number@2x';
 $sprite-cm2-fm-btn-cmt-number-2x-x: 137px;
 $sprite-cm2-fm-btn-cmt-number-2x-y: 148px;
@@ -166,7 +188,7 @@ $sprite-cm2-icn-shuffle-2x: (277px, 285px, -277px, -285px, 88px, 88px, 436px, 38
 $netease-spritesheet-width: 436px;
 $netease-spritesheet-height: 383px;
 $netease-spritesheet-image: '~@/assets/_spritesmith/netease.png';
-$netease-spritesheet-sprites: ($sprite-cm2-icn-back-2x, $sprite-cm2-list-icn-search-2x, $sprite-cm4-btm-icn-account-2x, $sprite-cm4-btm-icn-discovery-2x, $sprite-cm2-fm-btn-cmt-number-2x, $sprite-cm2-fm-btn-love-2x, $sprite-cm2-fm-btn-loved-2x, $sprite-cm2-fm-btn-next-dis-3x, $sprite-cm2-fm-btn-next-2x, $sprite-cm2-fm-btn-pause-2x, $sprite-cm2-fm-btn-play-2x, $sprite-cm2-icn-loop-2x, $sprite-cm2-icn-one-2x, $sprite-cm2-icn-shuffle-2x, );
+$netease-spritesheet-sprites: ($sprite-cm2-icn-back-2x, $sprite-cm2-list-icn-search-2x, $sprite-cm4-btm-icn-account-2x, $sprite-cm4-btm-icn-discovery-2x, $sprite-cm4-btm-icn-account-white-2x, $sprite-cm4-btm-icn-discovery-white-2x, $sprite-cm2-fm-btn-cmt-number-2x, $sprite-cm2-fm-btn-love-2x, $sprite-cm2-fm-btn-loved-2x, $sprite-cm2-fm-btn-next-dis-3x, $sprite-cm2-fm-btn-next-2x, $sprite-cm2-fm-btn-pause-2x, $sprite-cm2-fm-btn-play-2x, $sprite-cm2-icn-loop-2x, $sprite-cm2-icn-one-2x, $sprite-cm2-icn-shuffle-2x, );
 $netease-spritesheet: (436px, 383px, '~@/assets/_spritesmith/netease.png', $netease-spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
