--- a/src/styles/_adapter.scss
+++ b/src/styles/_adapter.scss
@@ -1,9 +1,21 @@
 
 html {
-    height: 100%;
-    font-size: calc(100vw / 7.5);
+
+    &[data-screen='portrait']{
+        font-size: calc(100vw / 7.5);
+    }
+
+    &[data-screen='landscape']{
+        font-size: calc(100vw / 13.34);
+    }
+    
     body{
-        height: 100%;
         font-size: 16px;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background: blue;
     } 
 }
