--- a/src/assets/_spritesmith/netease.scss
+++ b/src/assets/_spritesmith/netease.scss
@@ -9,73 +9,139 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
-$sprite-cm2-icn-back-2x-name: 'sprite_cm2_icn_back@2x';
+$sprite-cm2-icn-back-2x-name: "sprite_cm2_icn_back@2x";
 $sprite-cm2-icn-back-2x-x: 384px;
-$sprite-cm2-icn-back-2x-y: 53px;
+$sprite-cm2-icn-back-2x-y: 159px;
 $sprite-cm2-icn-back-2x-offset-x: -384px;
-$sprite-cm2-icn-back-2x-offset-y: -53px;
+$sprite-cm2-icn-back-2x-offset-y: -159px;
 $sprite-cm2-icn-back-2x-width: 50px;
 $sprite-cm2-icn-back-2x-height: 50px;
 $sprite-cm2-icn-back-2x-total-width: 436px;
 $sprite-cm2-icn-back-2x-total-height: 383px;
-$sprite-cm2-icn-back-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-icn-back-2x: (384px, 53px, -384px, -53px, 50px, 50px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_icn_back@2x', );
-$sprite-cm2-list-icn-search-2x-name: 'sprite_cm2_list_icn_search@2x';
+$sprite-cm2-icn-back-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-icn-back-2x: (
+  384px,
+  159px,
+  -384px,
+  -159px,
+  50px,
+  50px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_icn_back@2x"
+);
+$sprite-cm2-list-icn-search-2x-name: "sprite_cm2_list_icn_search@2x";
 $sprite-cm2-list-icn-search-2x-x: 384px;
-$sprite-cm2-list-icn-search-2x-y: 196px;
+$sprite-cm2-list-icn-search-2x-y: 210px;
 $sprite-cm2-list-icn-search-2x-offset-x: -384px;
-$sprite-cm2-list-icn-search-2x-offset-y: -196px;
+$sprite-cm2-list-icn-search-2x-offset-y: -210px;
 $sprite-cm2-list-icn-search-2x-width: 24px;
 $sprite-cm2-list-icn-search-2x-height: 24px;
 $sprite-cm2-list-icn-search-2x-total-width: 436px;
 $sprite-cm2-list-icn-search-2x-total-height: 383px;
-$sprite-cm2-list-icn-search-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-list-icn-search-2x: (384px, 196px, -384px, -196px, 24px, 24px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_list_icn_search@2x', );
-$sprite-cm4-btm-icn-account-white-2x-name: 'sprite_cm4_btm_icn_account_white@2x';
-$sprite-cm4-btm-icn-account-white-2x-x: 384px;
-$sprite-cm4-btm-icn-account-white-2x-y: 151px;
-$sprite-cm4-btm-icn-account-white-2x-offset-x: -384px;
-$sprite-cm4-btm-icn-account-white-2x-offset-y: -151px;
-$sprite-cm4-btm-icn-account-white-2x-width: 38px;
-$sprite-cm4-btm-icn-account-white-2x-height: 44px;
+$sprite-cm2-list-icn-search-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-list-icn-search-2x: (
+  384px,
+  210px,
+  -384px,
+  -210px,
+  24px,
+  24px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_list_icn_search@2x"
+);
+$sprite-cm4-btm-icn-account-white-2x-name: "sprite_cm4_btm_icn_account_white@2x";
+$sprite-cm4-btm-icn-account-white-2x-x: 285px;
+$sprite-cm4-btm-icn-account-white-2x-y: 198px;
+$sprite-cm4-btm-icn-account-white-2x-offset-x: -285px;
+$sprite-cm4-btm-icn-account-white-2x-offset-y: -198px;
+$sprite-cm4-btm-icn-account-white-2x-width: 52px;
+$sprite-cm4-btm-icn-account-white-2x-height: 52px;
 $sprite-cm4-btm-icn-account-white-2x-total-width: 436px;
 $sprite-cm4-btm-icn-account-white-2x-total-height: 383px;
-$sprite-cm4-btm-icn-account-white-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm4-btm-icn-account-white-2x: (384px, 151px, -384px, -151px, 38px, 44px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm4_btm_icn_account_white@2x', );
-$sprite-cm4-btm-icn-account-2x-name: 'sprite_cm4_btm_icn_account@2x';
-$sprite-cm4-btm-icn-account-2x-x: 285px;
-$sprite-cm4-btm-icn-account-2x-y: 198px;
-$sprite-cm4-btm-icn-account-2x-offset-x: -285px;
-$sprite-cm4-btm-icn-account-2x-offset-y: -198px;
+$sprite-cm4-btm-icn-account-white-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm4-btm-icn-account-white-2x: (
+  285px,
+  198px,
+  -285px,
+  -198px,
+  52px,
+  52px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm4_btm_icn_account_white@2x"
+);
+$sprite-cm4-btm-icn-account-2x-name: "sprite_cm4_btm_icn_account@2x";
+$sprite-cm4-btm-icn-account-2x-x: 384px;
+$sprite-cm4-btm-icn-account-2x-y: 0px;
+$sprite-cm4-btm-icn-account-2x-offset-x: -384px;
+$sprite-cm4-btm-icn-account-2x-offset-y: 0px;
 $sprite-cm4-btm-icn-account-2x-width: 52px;
 $sprite-cm4-btm-icn-account-2x-height: 52px;
 $sprite-cm4-btm-icn-account-2x-total-width: 436px;
 $sprite-cm4-btm-icn-account-2x-total-height: 383px;
-$sprite-cm4-btm-icn-account-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm4-btm-icn-account-2x: (285px, 198px, -285px, -198px, 52px, 52px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm4_btm_icn_account@2x', );
-$sprite-cm4-btm-icn-discovery-white-2x-name: 'sprite_cm4_btm_icn_discovery_white@2x';
+$sprite-cm4-btm-icn-account-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm4-btm-icn-account-2x: (
+  384px,
+  0px,
+  -384px,
+  0px,
+  52px,
+  52px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm4_btm_icn_account@2x"
+);
+$sprite-cm4-btm-icn-discovery-white-2x-name: "sprite_cm4_btm_icn_discovery_white@2x";
 $sprite-cm4-btm-icn-discovery-white-2x-x: 384px;
-$sprite-cm4-btm-icn-discovery-white-2x-y: 104px;
+$sprite-cm4-btm-icn-discovery-white-2x-y: 53px;
 $sprite-cm4-btm-icn-discovery-white-2x-offset-x: -384px;
-$sprite-cm4-btm-icn-discovery-white-2x-offset-y: -104px;
-$sprite-cm4-btm-icn-discovery-white-2x-width: 41px;
-$sprite-cm4-btm-icn-discovery-white-2x-height: 46px;
+$sprite-cm4-btm-icn-discovery-white-2x-offset-y: -53px;
+$sprite-cm4-btm-icn-discovery-white-2x-width: 52px;
+$sprite-cm4-btm-icn-discovery-white-2x-height: 52px;
 $sprite-cm4-btm-icn-discovery-white-2x-total-width: 436px;
 $sprite-cm4-btm-icn-discovery-white-2x-total-height: 383px;
-$sprite-cm4-btm-icn-discovery-white-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm4-btm-icn-discovery-white-2x: (384px, 104px, -384px, -104px, 41px, 46px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm4_btm_icn_discovery_white@2x', );
-$sprite-cm4-btm-icn-discovery-2x-name: 'sprite_cm4_btm_icn_discovery@2x';
+$sprite-cm4-btm-icn-discovery-white-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm4-btm-icn-discovery-white-2x: (
+  384px,
+  53px,
+  -384px,
+  -53px,
+  52px,
+  52px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm4_btm_icn_discovery_white@2x"
+);
+$sprite-cm4-btm-icn-discovery-2x-name: "sprite_cm4_btm_icn_discovery@2x";
 $sprite-cm4-btm-icn-discovery-2x-x: 384px;
-$sprite-cm4-btm-icn-discovery-2x-y: 0px;
+$sprite-cm4-btm-icn-discovery-2x-y: 106px;
 $sprite-cm4-btm-icn-discovery-2x-offset-x: -384px;
-$sprite-cm4-btm-icn-discovery-2x-offset-y: 0px;
+$sprite-cm4-btm-icn-discovery-2x-offset-y: -106px;
 $sprite-cm4-btm-icn-discovery-2x-width: 52px;
 $sprite-cm4-btm-icn-discovery-2x-height: 52px;
 $sprite-cm4-btm-icn-discovery-2x-total-width: 436px;
 $sprite-cm4-btm-icn-discovery-2x-total-height: 383px;
-$sprite-cm4-btm-icn-discovery-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm4-btm-icn-discovery-2x: (384px, 0px, -384px, 0px, 52px, 52px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm4_btm_icn_discovery@2x', );
-$sprite-cm2-fm-btn-cmt-number-2x-name: 'sprite_cm2_fm_btn_cmt_number@2x';
+$sprite-cm4-btm-icn-discovery-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm4-btm-icn-discovery-2x: (
+  384px,
+  106px,
+  -384px,
+  -106px,
+  52px,
+  52px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm4_btm_icn_discovery@2x"
+);
+$sprite-cm2-fm-btn-cmt-number-2x-name: "sprite_cm2_fm_btn_cmt_number@2x";
 $sprite-cm2-fm-btn-cmt-number-2x-x: 137px;
 $sprite-cm2-fm-btn-cmt-number-2x-y: 148px;
 $sprite-cm2-fm-btn-cmt-number-2x-offset-x: -137px;
@@ -84,9 +150,20 @@ $sprite-cm2-fm-btn-cmt-number-2x-width: 98px;
 $sprite-cm2-fm-btn-cmt-number-2x-height: 98px;
 $sprite-cm2-fm-btn-cmt-number-2x-total-width: 436px;
 $sprite-cm2-fm-btn-cmt-number-2x-total-height: 383px;
-$sprite-cm2-fm-btn-cmt-number-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-fm-btn-cmt-number-2x: (137px, 148px, -137px, -148px, 98px, 98px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_fm_btn_cmt_number@2x', );
-$sprite-cm2-fm-btn-love-2x-name: 'sprite_cm2_fm_btn_love@2x';
+$sprite-cm2-fm-btn-cmt-number-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-fm-btn-cmt-number-2x: (
+  137px,
+  148px,
+  -137px,
+  -148px,
+  98px,
+  98px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_fm_btn_cmt_number@2x"
+);
+$sprite-cm2-fm-btn-love-2x-name: "sprite_cm2_fm_btn_love@2x";
 $sprite-cm2-fm-btn-love-2x-x: 285px;
 $sprite-cm2-fm-btn-love-2x-y: 0px;
 $sprite-cm2-fm-btn-love-2x-offset-x: -285px;
@@ -95,9 +172,20 @@ $sprite-cm2-fm-btn-love-2x-width: 98px;
 $sprite-cm2-fm-btn-love-2x-height: 98px;
 $sprite-cm2-fm-btn-love-2x-total-width: 436px;
 $sprite-cm2-fm-btn-love-2x-total-height: 383px;
-$sprite-cm2-fm-btn-love-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-fm-btn-love-2x: (285px, 0px, -285px, 0px, 98px, 98px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_fm_btn_love@2x', );
-$sprite-cm2-fm-btn-loved-2x-name: 'sprite_cm2_fm_btn_loved@2x';
+$sprite-cm2-fm-btn-love-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-fm-btn-love-2x: (
+  285px,
+  0px,
+  -285px,
+  0px,
+  98px,
+  98px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_fm_btn_love@2x"
+);
+$sprite-cm2-fm-btn-loved-2x-name: "sprite_cm2_fm_btn_loved@2x";
 $sprite-cm2-fm-btn-loved-2x-x: 285px;
 $sprite-cm2-fm-btn-loved-2x-y: 99px;
 $sprite-cm2-fm-btn-loved-2x-offset-x: -285px;
@@ -106,9 +194,20 @@ $sprite-cm2-fm-btn-loved-2x-width: 98px;
 $sprite-cm2-fm-btn-loved-2x-height: 98px;
 $sprite-cm2-fm-btn-loved-2x-total-width: 436px;
 $sprite-cm2-fm-btn-loved-2x-total-height: 383px;
-$sprite-cm2-fm-btn-loved-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-fm-btn-loved-2x: (285px, 99px, -285px, -99px, 98px, 98px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_fm_btn_loved@2x', );
-$sprite-cm2-fm-btn-next-dis-3x-name: 'sprite_cm2_fm_btn_next_dis@3x';
+$sprite-cm2-fm-btn-loved-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-fm-btn-loved-2x: (
+  285px,
+  99px,
+  -285px,
+  -99px,
+  98px,
+  98px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_fm_btn_loved@2x"
+);
+$sprite-cm2-fm-btn-next-dis-3x-name: "sprite_cm2_fm_btn_next_dis@3x";
 $sprite-cm2-fm-btn-next-dis-3x-x: 0px;
 $sprite-cm2-fm-btn-next-dis-3x-y: 0px;
 $sprite-cm2-fm-btn-next-dis-3x-offset-x: 0px;
@@ -117,9 +216,20 @@ $sprite-cm2-fm-btn-next-dis-3x-width: 147px;
 $sprite-cm2-fm-btn-next-dis-3x-height: 147px;
 $sprite-cm2-fm-btn-next-dis-3x-total-width: 436px;
 $sprite-cm2-fm-btn-next-dis-3x-total-height: 383px;
-$sprite-cm2-fm-btn-next-dis-3x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-fm-btn-next-dis-3x: (0px, 0px, 0px, 0px, 147px, 147px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_fm_btn_next_dis@3x', );
-$sprite-cm2-fm-btn-next-2x-name: 'sprite_cm2_fm_btn_next@2x';
+$sprite-cm2-fm-btn-next-dis-3x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-fm-btn-next-dis-3x: (
+  0px,
+  0px,
+  0px,
+  0px,
+  147px,
+  147px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_fm_btn_next_dis@3x"
+);
+$sprite-cm2-fm-btn-next-2x-name: "sprite_cm2_fm_btn_next@2x";
 $sprite-cm2-fm-btn-next-2x-x: 0px;
 $sprite-cm2-fm-btn-next-2x-y: 285px;
 $sprite-cm2-fm-btn-next-2x-offset-x: 0px;
@@ -128,9 +238,20 @@ $sprite-cm2-fm-btn-next-2x-width: 98px;
 $sprite-cm2-fm-btn-next-2x-height: 98px;
 $sprite-cm2-fm-btn-next-2x-total-width: 436px;
 $sprite-cm2-fm-btn-next-2x-total-height: 383px;
-$sprite-cm2-fm-btn-next-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-fm-btn-next-2x: (0px, 285px, 0px, -285px, 98px, 98px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_fm_btn_next@2x', );
-$sprite-cm2-fm-btn-pause-2x-name: 'sprite_cm2_fm_btn_pause@2x';
+$sprite-cm2-fm-btn-next-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-fm-btn-next-2x: (
+  0px,
+  285px,
+  0px,
+  -285px,
+  98px,
+  98px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_fm_btn_next@2x"
+);
+$sprite-cm2-fm-btn-pause-2x-name: "sprite_cm2_fm_btn_pause@2x";
 $sprite-cm2-fm-btn-pause-2x-x: 148px;
 $sprite-cm2-fm-btn-pause-2x-y: 0px;
 $sprite-cm2-fm-btn-pause-2x-offset-x: -148px;
@@ -139,9 +260,20 @@ $sprite-cm2-fm-btn-pause-2x-width: 136px;
 $sprite-cm2-fm-btn-pause-2x-height: 136px;
 $sprite-cm2-fm-btn-pause-2x-total-width: 436px;
 $sprite-cm2-fm-btn-pause-2x-total-height: 383px;
-$sprite-cm2-fm-btn-pause-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-fm-btn-pause-2x: (148px, 0px, -148px, 0px, 136px, 136px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_fm_btn_pause@2x', );
-$sprite-cm2-fm-btn-play-2x-name: 'sprite_cm2_fm_btn_play@2x';
+$sprite-cm2-fm-btn-pause-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-fm-btn-pause-2x: (
+  148px,
+  0px,
+  -148px,
+  0px,
+  136px,
+  136px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_fm_btn_pause@2x"
+);
+$sprite-cm2-fm-btn-play-2x-name: "sprite_cm2_fm_btn_play@2x";
 $sprite-cm2-fm-btn-play-2x-x: 0px;
 $sprite-cm2-fm-btn-play-2x-y: 148px;
 $sprite-cm2-fm-btn-play-2x-offset-x: 0px;
@@ -150,9 +282,20 @@ $sprite-cm2-fm-btn-play-2x-width: 136px;
 $sprite-cm2-fm-btn-play-2x-height: 136px;
 $sprite-cm2-fm-btn-play-2x-total-width: 436px;
 $sprite-cm2-fm-btn-play-2x-total-height: 383px;
-$sprite-cm2-fm-btn-play-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-fm-btn-play-2x: (0px, 148px, 0px, -148px, 136px, 136px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_fm_btn_play@2x', );
-$sprite-cm2-icn-loop-2x-name: 'sprite_cm2_icn_loop@2x';
+$sprite-cm2-fm-btn-play-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-fm-btn-play-2x: (
+  0px,
+  148px,
+  0px,
+  -148px,
+  136px,
+  136px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_fm_btn_play@2x"
+);
+$sprite-cm2-icn-loop-2x-name: "sprite_cm2_icn_loop@2x";
 $sprite-cm2-icn-loop-2x-x: 99px;
 $sprite-cm2-icn-loop-2x-y: 285px;
 $sprite-cm2-icn-loop-2x-offset-x: -99px;
@@ -161,9 +304,20 @@ $sprite-cm2-icn-loop-2x-width: 88px;
 $sprite-cm2-icn-loop-2x-height: 88px;
 $sprite-cm2-icn-loop-2x-total-width: 436px;
 $sprite-cm2-icn-loop-2x-total-height: 383px;
-$sprite-cm2-icn-loop-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-icn-loop-2x: (99px, 285px, -99px, -285px, 88px, 88px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_icn_loop@2x', );
-$sprite-cm2-icn-one-2x-name: 'sprite_cm2_icn_one@2x';
+$sprite-cm2-icn-loop-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-icn-loop-2x: (
+  99px,
+  285px,
+  -99px,
+  -285px,
+  88px,
+  88px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_icn_loop@2x"
+);
+$sprite-cm2-icn-one-2x-name: "sprite_cm2_icn_one@2x";
 $sprite-cm2-icn-one-2x-x: 188px;
 $sprite-cm2-icn-one-2x-y: 285px;
 $sprite-cm2-icn-one-2x-offset-x: -188px;
@@ -172,9 +326,20 @@ $sprite-cm2-icn-one-2x-width: 88px;
 $sprite-cm2-icn-one-2x-height: 88px;
 $sprite-cm2-icn-one-2x-total-width: 436px;
 $sprite-cm2-icn-one-2x-total-height: 383px;
-$sprite-cm2-icn-one-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-icn-one-2x: (188px, 285px, -188px, -285px, 88px, 88px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_icn_one@2x', );
-$sprite-cm2-icn-shuffle-2x-name: 'sprite_cm2_icn_shuffle@2x';
+$sprite-cm2-icn-one-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-icn-one-2x: (
+  188px,
+  285px,
+  -188px,
+  -285px,
+  88px,
+  88px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_icn_one@2x"
+);
+$sprite-cm2-icn-shuffle-2x-name: "sprite_cm2_icn_shuffle@2x";
 $sprite-cm2-icn-shuffle-2x-x: 277px;
 $sprite-cm2-icn-shuffle-2x-y: 285px;
 $sprite-cm2-icn-shuffle-2x-offset-x: -277px;
@@ -183,13 +348,46 @@ $sprite-cm2-icn-shuffle-2x-width: 88px;
 $sprite-cm2-icn-shuffle-2x-height: 88px;
 $sprite-cm2-icn-shuffle-2x-total-width: 436px;
 $sprite-cm2-icn-shuffle-2x-total-height: 383px;
-$sprite-cm2-icn-shuffle-2x-image: '~@/assets/_spritesmith/netease.png';
-$sprite-cm2-icn-shuffle-2x: (277px, 285px, -277px, -285px, 88px, 88px, 436px, 383px, '~@/assets/_spritesmith/netease.png', 'sprite_cm2_icn_shuffle@2x', );
+$sprite-cm2-icn-shuffle-2x-image: "~@/assets/_spritesmith/netease.png";
+$sprite-cm2-icn-shuffle-2x: (
+  277px,
+  285px,
+  -277px,
+  -285px,
+  88px,
+  88px,
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  "sprite_cm2_icn_shuffle@2x"
+);
 $netease-spritesheet-width: 436px;
 $netease-spritesheet-height: 383px;
-$netease-spritesheet-image: '~@/assets/_spritesmith/netease.png';
-$netease-spritesheet-sprites: ($sprite-cm2-icn-back-2x, $sprite-cm2-list-icn-search-2x, $sprite-cm4-btm-icn-account-white-2x, $sprite-cm4-btm-icn-account-2x, $sprite-cm4-btm-icn-discovery-white-2x, $sprite-cm4-btm-icn-discovery-2x, $sprite-cm2-fm-btn-cmt-number-2x, $sprite-cm2-fm-btn-love-2x, $sprite-cm2-fm-btn-loved-2x, $sprite-cm2-fm-btn-next-dis-3x, $sprite-cm2-fm-btn-next-2x, $sprite-cm2-fm-btn-pause-2x, $sprite-cm2-fm-btn-play-2x, $sprite-cm2-icn-loop-2x, $sprite-cm2-icn-one-2x, $sprite-cm2-icn-shuffle-2x, );
-$netease-spritesheet: (436px, 383px, '~@/assets/_spritesmith/netease.png', $netease-spritesheet-sprites, );
+$netease-spritesheet-image: "~@/assets/_spritesmith/netease.png";
+$netease-spritesheet-sprites: (
+  $sprite-cm2-icn-back-2x,
+  $sprite-cm2-list-icn-search-2x,
+  $sprite-cm4-btm-icn-account-white-2x,
+  $sprite-cm4-btm-icn-account-2x,
+  $sprite-cm4-btm-icn-discovery-white-2x,
+  $sprite-cm4-btm-icn-discovery-2x,
+  $sprite-cm2-fm-btn-cmt-number-2x,
+  $sprite-cm2-fm-btn-love-2x,
+  $sprite-cm2-fm-btn-loved-2x,
+  $sprite-cm2-fm-btn-next-dis-3x,
+  $sprite-cm2-fm-btn-next-2x,
+  $sprite-cm2-fm-btn-pause-2x,
+  $sprite-cm2-fm-btn-play-2x,
+  $sprite-cm2-icn-loop-2x,
+  $sprite-cm2-icn-one-2x,
+  $sprite-cm2-icn-shuffle-2x
+);
+$netease-spritesheet: (
+  436px,
+  383px,
+  "~@/assets/_spritesmith/netease.png",
+  $netease-spritesheet-sprites
+);
 
 // The provided mixins are intended to be used with the array-like variables
 //
@@ -226,13 +424,13 @@ $netease-spritesheet: (436px, 383px, '~@/assets/_spritesmith/netease.png', $nete
 @mixin sprite-position($sprite) {
   $sprite-offset-x: nth($sprite, 3);
   $sprite-offset-y: nth($sprite, 4);
-  background-position: $sprite-offset-x  $sprite-offset-y;
+  background-position: $sprite-offset-x $sprite-offset-y;
 }
 
 @mixin sprite-size($sprite) {
   $sprite-size-x: nth($sprite, 7);
   $sprite-size-y: nth($sprite, 8);
-  background-size: $sprite-size-x  $sprite-size-y;
+  background-size: $sprite-size-x $sprite-size-y;
 }
 
 @mixin sprite-image($sprite) {
