--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,76 +1,87 @@
-.footer-component{
-    width: 100%;
-    height: $footerHeight;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background: rgba(27, 27, 28, .8);
-    .footer-navs{
+.footer-component {
+  width: 100%;
+  height: $footerHeight;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: rgba(27, 27, 28, 0.8);
+  .footer-navs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    .tabs-item {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      color: #707070;
+      font-size: 18px;
+      transition: color 0.3s;
+      .footer-nav-item {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 100%;
-        .tabs-item{
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            color: #707070;
-            font-size: 20px;
-            transition: color 0.3s;
-            .footer-nav-item{
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                .icon-box-container{
-                    width: 52px;
-                    height: 52px;
-                    position: relative;
-                    margin-bottom: 6px;
-                }
-                .icon-box{
-                    position: absolute;
-                    left: 0;
-                    top: 0;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    width: 52px;
-                    height: 52px;
-                    border-radius: 50%;
-                    z-index: 0;
-                    >i{
-                        &.icon-home{
-                            @include sprite($sprite-cm4-btm-icn-discovery-2x)
-                        }
-
-                        &.icon-mine{
-                            @include sprite($sprite-cm4-btm-icn-account-2x)
-                        }
-                    }
-
-                    &[data-status='on']{
-                        background: linear-gradient(to right, #ff5639 0%,#ff5b3c 25%,#ff5639 50%,#ff5b3c 100%);
-                        z-index: 1;
-                        >i{
-                            transform: scale(0.7);
-                            &.icon-home{
-                                @include sprite($sprite-cm4-btm-icn-discovery-white-2x)
-                            }
-    
-                            &.icon-mine{
-                                @include sprite($sprite-cm4-btm-icn-account-white-2x)
-                            }
-                        }
-                    }
-                }
-            }
-            &.active{
-                color: #ff4033;
-            }
+        .icon-box-container {
+          width: 52px;
+          height: 52px;
+          position: relative;
+          margin-bottom: 6px;
         }
-    }
+        .icon-box {
+          position: absolute;
+          left: 0;
+          top: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 52px;
+          height: 52px;
+          border-radius: 50%;
+          z-index: 0;
+          > i {
+            &.icon-home {
+              @include sprite($sprite-cm4-btm-icn-discovery-2x);
+            }
 
+            &.icon-mine {
+              @include sprite($sprite-cm4-btm-icn-account-2x);
+            }
+          }
+
+          &[data-status="on"] {
+            background: linear-gradient(
+              to right,
+              #ff5639 0%,
+              #ff5b3c 25%,
+              #ff5639 50%,
+              #ff5b3c 100%
+            );
+            z-index: 1;
+            > i {
+              transform: scale(0.65);
+              &.icon-home {
+                @include sprite($sprite-cm4-btm-icn-discovery-white-2x);
+              }
+
+              &.icon-mine {
+                @include sprite($sprite-cm4-btm-icn-account-white-2x);
+              }
+            }
+          }
+
+          &[data-status="off"] {
+            > i {
+              transform: scale(0.9);
+            }
+          }
+        }
+      }
+      &.active {
+        color: #ff4033;
+      }
+    }
+  }
 }
