--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -1,56 +1,189 @@
-.search-component{
-    background: #212121;
-    width: 524px;
-    height: 72px;
-    margin: 0 auto;
-    position: relative;
-    transition: transform 0.3s;
+.search-component {
+  background: #212121;
+  width: 524px;
+  height: 72px;
+  margin: 0 auto;
+  position: relative;
+  transition: transform 0.3s;
+  border-radius: 36px;
+  &[data-status="default"] {
+    .icon-search {
+      pointer-events: none;
+    }
+  }
+  &[data-status="hot"] {
+    transform: translateX(50%) translateX(-345px);
+    input {
+      text-align: left;
+    }
+  }
+  .btn-leave {
+    font-size: 28px;
+    color: white;
+    right: -20px;
+    position: absolute;
+    top: 50%;
+    transform: translateX(100%) translateY(-50%);
+    cursor: pointer;
+  }
+  .icon-search {
+    @include sprite($sprite-cm2-list-icn-search-2x);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 23px;
+    cursor: pointer;
+  }
+  input {
+    @include placeholder(#4c4c4c, 24px);
     border-radius: 36px;
-    &[data-status='leave']{
-        .icon-search{
-            pointer-events: none;
+    width: 100%;
+    height: 72px;
+    line-height: normal;
+    background: transparent;
+    outline: none;
+    border: none;
+    padding: 0 65px;
+    padding-top: 2px;
+    font-size: 24px;
+    color: #a2a2a2;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-align: center;
+  }
+}
+
+.search-content-mian {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: $headerHeight;
+  bottom: $footerHeight;
+  background: $mainColor;
+  .search-scroll-view-scroller {
+    .search-page-hot {
+      > section {
+        margin-bottom: 30px;
+        .title-box {
+          padding: 0 30px;
+          font-size: 24px;
+          color: white;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          height: 90px;
         }
-    }
-    &[data-status='enter']{
-        transform: translateX(50%) translateX(-345px);
-        input{
-            text-align: left;
+
+        &.search-history {
+          .title-box {
+            .icon-delete {
+              @include sprite($sprite-cm2-playlist-icn-delete-dis-2x);
+              cursor: pointer;
+            }
+          }
+          .content-box {
+            width: 100%;
+            position: relative;
+            &::before {
+              content: "";
+              right: 0;
+              width: 30px;
+              height: 100%;
+              position: absolute;
+              top: 0;
+              transform: translateZ(0);
+              z-index: 2;
+              box-shadow: inset -20px 0px 14px $mainColor;
+            }
+            > .swiper-container {
+              .swiper-slide {
+                width: auto;
+              }
+            }
+            .history-list-scroller {
+              padding: 0 30px;
+              display: inline-block;
+              font-size: 0;
+              white-space: nowrap;
+              > li {
+                display: inline-block;
+                height: 64px;
+                padding: 0 27px;
+                background-color: #202020;
+                border-radius: 32px;
+                font-size: 24px;
+                color: white;
+                text-align: center;
+                line-height: 64px;
+                &:not(:last-child) {
+                  margin-right: 20px;
+                }
+              }
+            }
+          }
         }
+        &.search-hot-list {
+          .content-box {
+            padding: 0 30px;
+            display: flex;
+            flex-wrap: wrap;
+            li {
+              font-size: 24px;
+              color: #5e5e5e;
+              width: 50%;
+              display: flex;
+              align-items: center;
+              margin-bottom: 50px;
+              > span {
+                width: 40px;
+                &.mark {
+                  color: #e94249;
+                }
+              }
+              > div {
+                width: calc(100% - 40px);
+                display: flex;
+                flex-direction: column;
+                > section {
+                  width: 100%;
+                  &.search-word {
+                    margin-bottom: 10px;
+                    color: white;
+                    font-weight: bold;
+                    > span {
+                      margin-right: 10px;
+                    }
+                    > i {
+                      &[data-type="1"] {
+                        color: #e94249;
+                      }
+                      &[data-type="2"] {
+                        color: #2caa2c;
+                      }
+
+                      &[data-type="5"] {
+                        color: #e94249;
+                      }
+                    }
+                  }
+
+                  &.hot-content {
+                    margin-top: 10px;
+                    font-size: 20px;
+                    p {
+                      overflow: hidden;
+                      text-overflow: ellipsis;
+                      white-space: nowrap;
+                      width: 90%;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
-    .btn-leave{
-        font-size: 28px;
-        color: white;
-        right: -20px;
-        position: absolute;
-        top: 50%;
-        transform: translateX(100%) translateY(-50%);
-        cursor: pointer;
-    }
-    .icon-search{
-        @include sprite($sprite-cm2-list-icn-search-2x);
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        left: 21px;
-        cursor: pointer;
-    }
-    input{
-        @include placeholder(#4c4c4c,24px);
-        border-radius: 36px;
-        width: 100%;
-        height: 72px;
-        line-height: normal;
-        background: transparent;
-        outline: none;
-        border: none;
-        padding: 0 65px;  
-        padding-top: 2px;
-        font-size: 24px;
-        color: #a2a2a2;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        text-align: center;
-    }
-    
+  }
 }
