--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,5 +1,8 @@
-.header-component{
-    height: $headerHeight;
-    background: #151515;
-    padding-top: 45px;
+#app {
+  #fixed-box {
+    .header-component {
+      background-color: $mainColor;
+      padding-top: 45px;
+    }
+  }
 }
