--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -28,11 +28,20 @@
     z-index: 10;
     > * {
       pointer-events: auto;
+      &.vue-portal-target {
+        pointer-events: none;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        > * {
+          pointer-events: auto;
+        }
+      }
     }
   }
 }
-
-
 
 .fade-enter,
 .fade-leave-to {
@@ -46,7 +55,7 @@
 
 .scale-enter,
 .scale-leave-to {
-  transform: scale(0);
+  transform: scale(0.8);
 }
 
 .scale-enter-active,
