--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -4,7 +4,8 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  background: rgba(27, 27, 28, 0.8);
+  background: rgba(27, 27, 28, 0.98);
+  z-index: 2;
   .footer-navs {
     display: flex;
     justify-content: center;
