--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -96,15 +96,21 @@
     }
   }
 
-  .search-content-mian {
+  .search-content-main {
     position: absolute;
     width: 100%;
     left: 0;
     top: $headerHeight;
-    bottom: $footerHeight;
+    bottom: 0;
     background: $mainColor;
+    > .swiper-container {
+      .swiper-scrollbar {
+        height: calc(100% - #{$footerHeight} - 2%);
+      }
+    }
     .search-scroll-view-scroller {
       .search-page-hot {
+        padding-bottom: $footerHeight;
         > section {
           width: 100%;
           &.fade-move {
@@ -254,6 +260,7 @@
         }
       }
       .search-page-suggest {
+        padding-bottom: $footerHeight;
         .search-tips {
           color: #507daf;
           font-size: 24px;
@@ -295,6 +302,59 @@
               white-space: nowrap;
             }
           }
+        }
+      }
+    }
+
+    .search-page-result {
+      $navsHeight: 80px;
+      position: absolute;
+      width: 100%;
+      top: 0;
+      bottom: 0;
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      .navs-container {
+        width: 100%;
+        height: $navsHeight;
+        border-bottom: 1px solid #2a2a2a;
+        > .swiper-container {
+          .swiper-slide {
+            width: auto;
+            .tabs-wrapper {
+              display: inline-block;
+              font-size: 0;
+              white-space: nowrap;
+              height: 100%;
+              .tabs-item {
+                display: inline-block;
+                font-size: 30px;
+                padding: 0 35px;
+                color: white;
+                transition: color 0.3s;
+                height: 100%;
+                &:not(:last-child) {
+                  margin-right: 6px;
+                }
+                &.active {
+                  color: #ff3a3a;
+                }
+                > div {
+                  height: 100%;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                }
+              }
+            }
+          }
+        }
+      }
+      .contents-container {
+        flex: 1 0 auto;
+        > .swiper-container {
+          height: 100%;
         }
       }
     }
