移动端flex主轴 为 y时  尽量别用 flex：1 而是用明确高度替换

--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -352,7 +352,7 @@
         }
       }
       .contents-container {
-        flex: 1 0 auto;
+        height: calc(100% - #{$navsHeight});
         > .swiper-container {
           height: 100%;
         }
