--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,6 +1,7 @@
 #app {
   #fixed-box {
     .header-component {
+      height: $headerHeight;
       background-color: $mainColor;
       padding-top: 45px;
     }
