--- a/src/components/NavsSlider/styles.scss
+++ b/src/components/NavsSlider/styles.scss
@@ -33,6 +33,7 @@
           .tabs-item {
             display: inline-block;
             font-size: 30px;
+            font-weight: bold;
             padding: 0 35px;
             color: white;
             transition: color 0.3s;
