--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -22,7 +22,7 @@
     transform: translateX(50%) translateX(-345px);
 
     .btn-leave {
-      font-size: 28px;
+      font-size: 30px;
       color: white;
       right: -20px;
       position: absolute;
@@ -69,10 +69,9 @@
       }
     }
     input {
-      @include placeholder(#4c4c4c, 24px);
+      @include placeholder(#4c4c4c, 30px);
       border-radius: 36px;
       width: 100%;
-
       height: 72px;
       line-height: normal;
       background: transparent;
@@ -80,7 +79,7 @@
       border: none;
       padding: 0 65px;
       padding-top: 2px;
-      font-size: 24px;
+      font-size: 30px;
       color: #a2a2a2;
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -326,20 +325,40 @@
               li {
                 display: flex;
                 padding-left: 26px;
+                min-height: 118px;
                 .keywords {
                   color: #4a73a0;
                 }
                 .content {
                   width: 100%;
-                  padding-top: 18px;
-                  padding-bottom: 15px;
+                  padding-right: 50px;
                   display: flex;
                   font-size: 20px;
                   border-bottom: 1px solid #2c2c2c;
-                  line-height: 38px;
+                  justify-content: space-between;
+                  padding-top: 15px;
+                  padding-bottom: 12px;
                   .group {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    > section {
+                      width: 546px;
+                      &,
+                      .artists-list {
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                      }
+                      &:not(:last-of-type) {
+                        margin-bottom: 11px;
+                      }
+                      color: #adadad;
+                    }
                     .name-box {
-                      font-size: 28px;
+                      color: white;
+                      font-size: 32px;
+                      // margin-bottom: 10px;
                     }
                   }
                 }
